# diploma

./: .dockerignore  Dockerfile  backend-graph.md  docker-compose.yml  nginx.all-in-one.conf
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/auth/dto/: auth-response.dto.ts  login.dto.ts  register.dto.ts
backend/src/auth/interfaces/: jwt-payload.interface.ts
backend/src/auth/strategies/: jwt.strategy.ts
backend/src/common/decorators/: current-user.decorator.ts
backend/src/common/enums/: barcode-format.enum.ts  camera.enum.ts  scan-mode.enum.ts  webhook-event.enum.ts
backend/src/common/guards/: roles.guard.ts
backend/src/common/interfaces/: authenticated-user.interface.ts
backend/src/dashboard/: dashboard.controller.ts  dashboard.module.ts  dashboard.service.ts
backend/src/dashboard/dto/: dashboard-query.dto.ts  scan-stats-response.dto.ts  webhook-stats-response.dto.ts
backend/src/database/: database-init.service.ts  database.module.ts  seed.ts
backend/src/profiles/: profiles.controller.ts  profiles.module.ts  profiles.service.spec.ts  profiles.service.ts
backend/src/profiles/dto/: profile-response.dto.ts  update-camera-settings.dto.ts  update-scan-settings.dto.ts
backend/src/profiles/schemas/: profile.schema.ts
backend/src/scan-history/: scan-history.controller.ts  scan-history.module.ts  scan-history.service.spec.ts  scan-history.service.ts
backend/src/scan-history/dto/: batch-delete-scan-records.dto.ts  create-scan-record.dto.ts  list-scan-records-query.dto.ts  scan-record-response.dto.ts  update-scan-record.dto.ts
backend/src/scan-history/schemas/: scan-record.schema.ts
backend/src/users/: users.controller.ts  users.module.ts  users.service.ts
backend/src/users/dto/: create-user.input.ts  user-response.dto.ts
backend/src/users/schemas/: user.schema.ts
backend/src/webhooks/: webhooks.controller.ts  webhooks.module.ts  webhooks.service.ts
backend/src/webhooks/dto/: create-webhook.dto.ts  update-webhook.dto.ts  webhook-response.dto.ts
backend/src/webhooks/schemas/: webhook-log.schema.ts  webhook.schema.ts
native/: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
native/scanner/: README.md
native/scanner/include/scanner/: barcode_format.h  barcode_scanner.h  scan_result.h  scanner_config.h
native/scanner/src/: barcode_scanner.cpp
native/scripts/: build-wasm.ps1  build-wasm.sh
native/wasm-api/: README.md
native/wasm-api/include/: wasm_api.h
native/wasm-api/src/: wasm_api.cpp
vite-app/: .env  .prettierrc.json  Dockerfile  eslint.config.js  package-lock.json  package.json
vite-app/src/: App.tsx  index.css  main.tsx
vite-app/src/pages/: index.ts
vite-app/src/shared/: routes.ts
(+38 files in other folders)
